# mystupid_2048

./: CMakeLists.txt
mystupid_2048/: CMakeLists.txt  mystupid_2048.cpp  mystupid_2048.h
